--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,13 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Pavel", "Reich", email = "reichp@gmail.com", role = c("aut", "cre"))
 Description: Convert GPS/Geo coordinates into decimal.
-Depends: R (>= 3.3.1)
-License: What license is it under?
+Depends:
+    R (>= 3.2)
+Imports:
+    measurements (>= 1.3.0),
+    assertthat
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
+Suggests: testthat
